<resources>
    <string name="app_name">proyecto</string>
    <string name="textoEliminar">Seleccione el servicio a eliminar</string>
    <string name="netflix">Netflix</string>
    <string name="disney">Disney</string>
    <string name="spotify">Spotify</string>
    <string name="CuentaItem">Cuenta</string>
    <string name="LogoutItem">Logout</string>
    <string name="mensajeSalida">Haz salido de la sesión</string>
    <string name="mes">Mes</string>
    <string name="año">Año</string>
    <string name="enero">Enero</string>
    <string name="fecha1">22 de Enero de 2022</string>
    <string name="fecha2">23 de Enero de 2022</string>
    <string name="monto1">13.99$</string>
    <string name="monto2">7.99$</string>
    <string name="monto3">5.99$</string>
    <string name="montoMensual">27.97$</string>
    <string name="totalMensual">Total mensual</string>
    <string name="añoActual">2022</string>
    <string name="monto1Anual">167.88$</string>
    <string name="monto2Anual">95.88$</string>
    <string name="monto3Anual">71.88$</string>
    <string name="montoAnual">335.64$</string>
    <string name="totalAnual">Total anual</string>
    <string name="vistaGenereal">Vista general de tu cuenta</string>
    <string name="usuarioTxt">Nombre de usuario</string>
    <string name="usuario">Usuario123</string>
    <string name="emailTxt">Correo electrónico</string>
    <string name="email">usuario123@gmail.com</string>
    <string name="nombreTxt">Nombre</string>
    <string name="nombre">Cristian Borja</string>
    <string name="tipoCuentaTxt">Tipo de cuenta</string>
    <string name="tipoCuenta">Plan gratuito</string>
    <string name="membresia">Obtener membresía</string>
    <string name="fecha_de_pago">Fecha de pago</string>
    <string name="costo_de_la_suscripci_n">Costo de la suscripción</string>
    <string name="nombre_del_servicio">Nombre del servicio</string>
    <string name="agregar_servicio">Agregar servicio</string>
    <string name="a_adir">Añadir</string>
    <string name="mensaje_exito_servicio_agregado">Se añadió el servicio exitosamente</string>
    <string name="conoce_tu_balance">Conoce tu balance</string>
    <string name="calendario">Calendario</string>
    <string name="informaci_n_del_usuario">Información del usuario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate">REGÍSTRATE</string>
    <string name="tus_servicios">Tus Servicios</string>
    <string name="registro_de_gastos">Registro de gastos</string>
    <string name="balance_y_calendario">Balance y calendario</string>
    <string name="agregar_servicio">Agregar servicio</string>
    <string name="eliminar_servicio">Eliminar servicio</string>
    <string name="opciones_de_gesti_n">Opciones de gestión</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="usuario_sign">Usuario</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo_electr_nico_txt">Correo Electrónico</string>
    <string name="contrase_a_string">Contraseña</string>
    <string name="registrar_txt">Registrar</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesi_n">INICIA SESIÖN</string>
</resources>