<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTituloAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/crear_usuario"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNombreServicio"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:hint="@string/usuario_sign"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloAgregar" />

    <EditText
        android:id="@+id/editFechaPago"
        android:layout_width="267dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/nombre_completo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNombreServicio" />

    <EditText
        android:id="@+id/editTextEmailCreate"
        android:layout_width="264dp"
        android:layout_height="41dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/correo_electr_nico_txt"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFechaPago" />

    <EditText
        android:id="@+id/editTextPassCreate"
        android:layout_width="261dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/contrase_a_string"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailCreate" />

    <Button
        android:id="@+id/buttonAgregarServicio"
        android:layout_width="176dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/aqua"
        android:text="@string/registrar_txt"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassCreate" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/ya_tienes_cuenta"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAgregarServicio" />

    <TextView
        android:id="@+id/textViewIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/inicia_sesi_n"
        android:textColor="#2039C1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAgregarServicio" />

</androidx.constraintlayout.widget.ConstraintLayout>